unpackaged/main/default/objects/Maintenance_Questionnaire__c/Maintenance_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Maintenance Questionnaire</label>
    <nameField>
        <displayFormat>MQ-{0000}</displayFormat>
        <label>Maintenance Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>