unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Criteria_to_Scrap_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Criteria_to_Scrap_Vehicle__c</fullName>
    <description>16.	What are the criteria being followed by you  to scrap the vehicle ?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>16.	What are the criteria being followed by you  to scrap the vehicle ?</inlineHelpText>
    <label>Criteria to Scrap Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>