unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Current_organization_chart_of_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Current_organization_chart_of_Fleet__c</fullName>
    <description>4.	Current organization chart of Fleet management including management, supporting staff and Technicians.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>4.	Current organization chart of Fleet management including management, supporting staff and Technicians.</inlineHelpText>
    <label>Current organization chart of Fleet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>