unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Details_of_persons_regular_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Details_of_persons_regular_Maintenance__c</fullName>
    <description>15.	Details of persons who do the regular Maintenance &amp; cleaning of the workshop including Equipment’s &amp; Tools.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>15.	Details of persons who do the regular Maintenance &amp; cleaning of the workshop including Equipment’s &amp; Tools.</inlineHelpText>
    <label>Details of persons regular Maintenance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>