unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Equipments__c.field-meta.xml
<CustomField>
    <fullName>Equipments__c</fullName>
    <description>2.	Average  usage  P/Month ( kilometer or Hrs) - Equipments</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>2.	Average  usage  P/Month ( kilometer or Hrs) - Equipments</inlineHelpText>
    <label>Equipments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>