unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Heavy_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Heavy_vehicle__c</fullName>
    <description>2.	Average  usage  P/Month ( kilometer or Hrs) - Heavy vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>2.	Average  usage  P/Month ( kilometer or Hrs) - Heavy vehicle</inlineHelpText>
    <label>Heavy vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>