unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/KPI_details__c.field-meta.xml
<CustomField>
    <fullName>KPI_details__c</fullName>
    <description>12.	Provide us the KPI details /control procedures being followed currently in your workshop and Service level achieved currently against your fleet?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>12.	Provide us the KPI details /control procedures being followed currently in your workshop and Service level achieved currently against your fleet?</inlineHelpText>
    <label>KPI details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>