unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Light_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Light_vehicle__c</fullName>
    <description>2.	Average  usage  P/Month ( kilometer or Hrs) - Light vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>2.	Average  usage  P/Month ( kilometer or Hrs)  - Light vehicle</inlineHelpText>
    <label>Light vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>