unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>3.	Current location of workshop, No of Bays and Tools  &amp; Equipment’s  - Location</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>3.	Current location of workshop, No of Bays and Tools  &amp; Equipment’s  - Location</inlineHelpText>
    <label>Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>