unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/No_Bays__c.field-meta.xml
<CustomField>
    <fullName>No_Bays__c</fullName>
    <description>3.	Current location of workshop, No of Bays and Tools  &amp; Equipment’s  - No. Bays</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>3.	Current location of workshop, No of Bays and Tools  &amp; Equipment’s  - No. Bays</inlineHelpText>
    <label>No. Bays</label>
    <length>200</length>
    <type>Text</type>
</CustomField>