unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Normal_duty_time__c.field-meta.xml
<CustomField>
    <fullName>Normal_duty_time__c</fullName>
    <description>8.	What is the normal duty time currently following in your operation?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>8.	What is the normal duty time currently following in your operation?</inlineHelpText>
    <label>Normal duty time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>