unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Operating_system_software_used__c.field-meta.xml
<CustomField>
    <fullName>Operating_system_software_used__c</fullName>
    <description>5.	What is the operating system (software) used for the workshop operation &amp; fleet maintenance/ store system?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>5.	What is the operating system (software) used for the workshop operation &amp; fleet maintenance/ store system?</inlineHelpText>
    <label>Operating system (software) used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>