unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/percentage_of_availability_of_vehicle__c.field-meta.xml
<CustomField>
    <fullName>percentage_of_availability_of_vehicle__c</fullName>
    <description>13.	What is the average percentage of availability % of vehicle/equipment on the road? Downtime %, Yearly accidental fleet % for last three years.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>13.	What is the average percentage of availability % of vehicle/equipment on the road? Downtime %, Yearly accidental fleet % for last three years.</inlineHelpText>
    <label>Percentage of availability % of vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>