unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Procedure_to_remove_workshop_scrap__c.field-meta.xml
<CustomField>
    <fullName>Procedure_to_remove_workshop_scrap__c</fullName>
    <description>17.	Kindly provide us the procedure to remove workshop scrap, used oil , etc. Who is the custodian of scrap materials ? Whether the contractor (ET)  or Company (Client)?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>17.	Kindly provide us the procedure to remove workshop scrap, used oil , etc. Who is the custodian of scrap materials ? Whether the contractor (ET)  or Company (Client)?</inlineHelpText>
    <label>Procedure to remove workshop scrap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>