unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Procedures_follow_for_accident_repairs__c.field-meta.xml
<CustomField>
    <fullName>Procedures_follow_for_accident_repairs__c</fullName>
    <description>6.	What are the procedures to follow for the accident repairs ? Name of the Insurance companies dealt by you?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>6.	What are the procedures to follow for the accident repairs ? Name of the Insurance companies dealt by you?</inlineHelpText>
    <label>Procedures follow for accident repairs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>