unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Service_contract_to_outsourcing_company__c.field-meta.xml
<CustomField>
    <fullName>Service_contract_to_outsourcing_company__c</fullName>
    <description>14.	Do you have any service contract with outsourcing company for the maintenance of workshop Equipment’s /Tools ?   If so kindly share the contract copies with us so as to understand the scope of works undertaken by them .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>14.	Do you have any service contract with outsourcing company for the maintenance of workshop Equipment’s /Tools ?   If so kindly share the contract copies with us so as to understand the scope of works undertaken by them .</inlineHelpText>
    <label>Service contract to outsourcing company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>