unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Service_interval_Equipments__c.field-meta.xml
<CustomField>
    <fullName>Service_interval_Equipments__c</fullName>
    <description>10.	What is the service interval of the Lube service followed by the various categories of fleet -Equipments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service interval Equipments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>