unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Service_interval_Heavy_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Service_interval_Heavy_vehicle__c</fullName>
    <description>10.	What is the service interval of the Lube service followed by the various categories of fleet - Heavy vehicle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service interval Heavy vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>