unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Service_interval_Light_vehicle_km__c.field-meta.xml
<CustomField>
    <fullName>Service_interval_Light_vehicle_km__c</fullName>
    <description>10.	What is the service interval of the Lube service followed by the various categories of fleet - Light vehicle(km)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service interval Light vehicle(km)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>