unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Spare_parts_and_Tyres_currently_using__c.field-meta.xml
<CustomField>
    <fullName>Spare_parts_and_Tyres_currently_using__c</fullName>
    <description>7.	Spare parts and Tyres currently using methods.
Are you using any replacement parts, Non genuine parts , OEM Parts ? 
What are the TYRE brands /make  used for fleet? What is the duration of replacement KM vs fleet type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>7.	Spare parts and Tyres currently using methods.
Are you using any replacement parts, Non genuine parts , OEM Parts ? 
What are the TYRE brands /make  used for fleet? What is the duration of replacement KM vs fleet type.</inlineHelpText>
    <label>Spare parts and Tyres currently using</label>
    <length>255</length>
    <type>Text</type>
</CustomField>