unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Tools_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Tools_Equipment__c</fullName>
    <description>3.	Current location of workshop, No of Bays and Tools  &amp; Equipment’s  - Tools &amp;Equipment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>3.	Current location of workshop, No of Bays and Tools  &amp; Equipment’s Tools &amp;Equipment</inlineHelpText>
    <label>Tools &amp; Equipment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>