unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Warranty_terms_available__c.field-meta.xml
<CustomField>
    <fullName>Warranty_terms_available__c</fullName>
    <description>11.	Kindly provide the details of warranty terms available with the dealer and its expiry dates ?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>11.	Kindly provide the details of warranty terms available with the dealer and its expiry dates ?</inlineHelpText>
    <label>Warranty terms available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>