unpackaged/main/default/objects/Maintenance_Questionnaire__c/fields/Workshop_Safety_HSE_policy__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Safety_HSE_policy__c</fullName>
    <description>9.	Kindly provide us your Workshop Safety &amp; HSE policy manual to understand the various aspects of HSE procedures followed in your workshop .</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>9.	Kindly provide us your Workshop Safety &amp; HSE policy manual to understand the various aspects of HSE procedures followed in your workshop .</inlineHelpText>
    <label>Workshop Safety &amp; HSE policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>